Add contact modification functionality & seperated it from the user details
