# whatsapp-clone-ui/src/app/services/user/models/user-response.ts
@@ -17,6 +17,11 @@ export interface UserResponse {
   firstName?: string;
 
   /**
+   * The user fullname
+   */
+  fullName?: string;
+
+  /**
    * The user Id
    */
   id?: string;
